[package]
name = "fishsticks"
version = "0.1.2"
edition = "2018"
keywords = ["gamedev"]
categories = ["game-development"]
repository = "https://github.com/PotatoTech/fishsticks"
homepage = "https://github.com/PotatoTech/fishsticks"
license = "Apache-2.0 OR MIT"
readme = "README.md"
description = """
A simple gamepad input library
"""

[features]
default = ["sdl2"]
bundled-sdl2 = ["sdl2/bundled"]

[dependencies]
cfg-if = "1.0.0"
gilrs = { version = "0.8.1", optional = true }
sdl2 = { version = "0.35.1", optional = true }
