[package]
name = "fishsticks"
version = "0.2.2"
edition = "2021"
keywords = ["gamedev"]
categories = ["game-development"]
repository = "https://github.com/fishfight/fishsticks"
homepage = "https://github.com/fishfight/fishsticks"
license = "Apache-2.0 OR MIT"
readme = "README.md"
description = """
A simple gamepad input library
"""

[features]
default = ["sdl2"]
bundled-sdl2 = ["sdl2/bundled"]

[dependencies]
cfg-if = "1.0.0"
gilrs = { version = "0.8.2", features = ["wasm-bindgen"], optional = true }
sdl2 = { version = "0.35.2", optional = true }

[package.metadata.release]
allow-branch = ["main"]
sign-tag = true
tag-message = "Fishsticks {{version}}"
